--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 image-box col-md-6 col-sm-6">
+                <div class="col-lg-3 image-box col-md-6 col-sm-6 col-12">
                     <div class="port-image">
                         <img src="./images/gallery1.png" alt="gallery1" class="img-fluid w-100">
                         <div class="overlay text-center">
@@ -305,7 +305,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 image-box col-md-6 col-sm-6">
+                <div class="col-lg-3 image-box col-md-6 col-sm-6 col-12">
                     <div class="port-image">
                         <img src="./images/gallery2.png" alt="gallery1" class="img-fluid w-100">
                         <div class="overlay text-center">
@@ -315,7 +315,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 image-box col-md-6 col-sm-6">
+                <div class="col-lg-3 image-box col-md-6 col-sm-6 col-12">
                     <div class="port-image">
                         <img src="./images/gallery3.png" alt="gallery1" class="img-fluid w-100">
                         <div class="overlay text-center">
@@ -325,7 +325,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 image-box col-md-6 col-sm-6">
+                <div class="col-lg-3 image-box col-md-6 col-sm-6 col-12">
                     <div class="port-image">
                         <img src="./images/gallery4.png" alt="gallery1" class="img-fluid w-100">
                         <div class="overlay text-center">
@@ -392,7 +392,7 @@
             <div class="container">
                 <div class="row blog-slider">
 
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
@@ -419,7 +419,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
@@ -444,7 +444,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
@@ -468,7 +468,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
@@ -495,7 +495,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
@@ -520,7 +520,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 ">
                         <div class="blog-item">
                             <div class="card rounded-0">
                                 <div class="team-image">
