--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="row">
                         <div class="col-lg-7 m-lg-auto">
                             <div class="banner-text text-center">
-                                <h1 class="mb-0 robo-bold fs35 text-white text-capitalize">We Make Your <span class="brand-col">Dream</span></h1>
+                                <h1 class="mb-0 robo-bold fs35 text-white text-capitalize pr60">We Make Your <span class="brand-col">Dream</span></h1>
                                 <p class="robo-reg fs14 pcol-white pd80">We are the best construction factory on production based ever. You can get every type ofort in the construction related work from us. Just feel free and come to us. We will help you to get the best solution.</p>
                                 <a href="#" class="btn btn-outline-light robo-bold fs16 dark-col mr25 rounded-0 text-uppercase">view solution</a>
                                 <a href="#" class="btn btn-outline-light rounded-0 robo-bold fs16 dark-col text-uppercase">purchase now</a>
